# peppercornenumerator

./: .gitignore  .hgignore  .travis.yml  CITATION.cff  LICENSE  Makefile  README.html  README.md  __init__.py  architecture.html  architecture.md  condense.py  enumerator.py  input.py  output.py  pyproject.toml  reactions.py  requirements.txt  setup.py  test_condense.py  test_enumerator.py  test_input.py  test_output.py  test_reactions.py  test_utils.py  utils.py
case_studies/: Condensation.ipynb  Kotani2017.ipynb  Many_systems.ipynb  Qian2011.ipynb  README.md  Reactionrates.ipynb  Yin2008.ipynb  dabby2013_rates.py  figure_analysis.py  kotani2017.py  qian2011.py  qian2011sqrt.py  zhang2011.py
docs/: Makefile  architecture.rst  conf.py  index.rst  quickstart.rst
peppercorn/: __init__.py  condense.py  enumerator.py  input.py  output.py  reactions.py  utils.py
peppercornenumerator/: __init__.py  condense.py  deprecated.py  dsdobjects.py  enumerator.py  input.py  objects.py  output.py  peppercorn.py  pil_parser.py  pilsimulator.py  ratemodel.py  reactions.py  utils.py
scripts/: benchmark.py  peppercorn  pilsimulator
test_files/: testJSONInputOutputLoop.out  testOutputFullGraph.out  testOutputFullGraph.out.dot  testOutputFullGraph.out.dot.eps  testOutputFullGraph2.out.dot  testOutputFullGraph2.out.dot.eps  testOutputJSON.out  testOutputJSON2.out  testOutputLegacy.out  testOutputLegacy2.out  testOutputLegacyCondensed.out  test_3arm_IABC.pil  test_input_kernel_4.pil  test_input_kernel_7.pil  test_input_pil.pil  test_input_pil_3arm_junction.pil  (+3 more)
tests/: test_condense.py  (+10 more)
(+303 files in other folders)
